Updating search interface.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -2,83 +2,122 @@
     <form with.bind="model">
         <fieldset>
             <legend>Search</legend>
-            <div class="form-group">
-                <label for="termInput">Team Name</label>
-                <input id="termInput" type="text" class="_width100" value.bind="term & debounce" focus="true" placeholder="Urouge Colo..." />
-            </div>
-            <div class="form-group" if.bind="!userLocked">
-                <label for="userInput">User Name</label>
-                <input id="userInput" type="text" class="_width100" value.bind="submittedBy & debounce" placeholder="Luffy..." />
-            </div>
-            <div class="form-group" if.bind="!stageLocked">
-                <label for="stageInput">Stage</label>
-                <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
-            </div>
-            <div class="form-group">
-                <label for="unitInput">Captain</label>
-                <unit-display id="unitInput"
-                              unit-id.two-way="leaderId"
-                              editable="true">
-                </unit-display>
-            </div>
-            <div class="form-group">
-                <label for="noHelpCheckbox">
-                    <input id="noHelpCheckbox" type="checkbox" checked.bind="noHelp" />
-                    <span class="-label-body"> No Friends</span>
-                </label>
-            </div>
-            <div class="form-group">
-                <label for="f2pSelect">Free to Play</label>
-                <select id="f2pSelect" class="_width100" value.bind="freeToPlay">
-                    <option repeat.for="option of freeToPlayOptions" model.bind="option.value">${option.name}</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="globalCheckbox">
-                    <input id="globalCheckbox" type="checkbox" checked.bind="global" />
-                    <span class="-label-body"> Global</span>
-                </label>
+
+            <div class="row">
+                <div class="col m12">
+                    <div class="form-group">
+                        <label for="termInput">Team Name</label>
+                        <input id="termInput" type="text" class="_width100" value.bind="term & debounce" focus="true" placeholder="Urouge Colo..." />
+                    </div>
+                </div>
+                <div class="col m6">
+                    <div class="form-group" if.bind="!stageLocked">
+                        <label for="stageInput">Stage</label>
+                        <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
+                    </div>
+                </div>
+                <div class="col m6">
+                    <div class="form-group" if.bind="!userLocked">
+                        <label for="userInput">User Name</label>
+                        <input id="userInput" type="text" class="_width100" value.bind="submittedBy & debounce" placeholder="Luffy..." />
+                    </div>
+                </div>
             </div>
 
-            <div class="form-group">
-                <label for="draftCheckbox" if.bind="canDraft">
-                    <input id="draftCheckbox" type="checkbox" checked.bind="draft" />
-                    <span class="-label-body">Drafts</span>
-                </label>
+            <div class="row">
+                <div class="col m2">
+                    <div class="row">
+                        <div class="form-group">
+                            <label for="unitInput">Captain</label>
+                            <unit-display id="unitInput"
+                                          size="large"
+                                          unit-id.two-way="leaderId"
+                                          editable="true">
+                            </unit-display>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group">
+                            <label for="noHelpCheckbox">
+                                <input id="noHelpCheckbox" type="checkbox" checked.bind="noHelp" />
+                                <span class="-label-body"> No Friends</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m10">
+                    <div class="row">
+                        <div class="col m8">
+                            <div class="form-group">
+                                <label for="unitTypeInput">Unit Types</label>
+                                <unit-type-picker id="unitTypeInput"
+                                                  value.two-way="types">
+                                </unit-type-picker>
+                            </div>
+                        </div>
+                        <div class="col m4">
+                            <div class="form-group">
+                                <label for="globalCheckbox">
+                                    <input id="globalCheckbox" type="checkbox" checked.bind="global" />
+                                    <span class="-label-body"> Global</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col m8">
+                            <div class="form-group">
+                                <label for="unitClassInput">Unit Classes</label>
+                                <unit-class-picker id="unitClassInput"
+                                                   value.two-way="classes"
+                                                   editable="true">
+                                </unit-class-picker>
+                            </div>
+                        </div>
+                        <div class="col m4">
+                            <div class="form-group">
+                                <label for="f2pSelect">Free to Play</label>
+                                <select id="f2pSelect" class="_width100" value.bind="freeToPlay">
+                                    <option repeat.for="option of freeToPlayOptions" model.bind="option.value">${option.name}</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="form-group">
-                <label for="reportedCheckbox" auth-req="Moderator, Administrator">
-                    <input id="reportedCheckbox" type="checkbox" checked.bind="reported" />
-                    <span class="-label-body">Reported</span>
-                </label>
+            <div class="row">
+                <div class="col m3">
+                    <div class="form-group">
+                        <label for="draftCheckbox" if.bind="canDraft">
+                            <input id="draftCheckbox" type="checkbox" checked.bind="draft" />
+                            <span class="-label-body">Drafts</span>
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col m3">
+                    <div class="form-group">
+                        <label for="reportedCheckbox" auth-req="Moderator, Administrator">
+                            <input id="reportedCheckbox" type="checkbox" checked.bind="reported" />
+                            <span class="-label-body">Reported</span>
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col m3">
+                    <div class="form-group">
+                        <label for="deletedCheckbox" auth-req="Moderator, Administrator">
+                            <input id="deletedCheckbox" type="checkbox" checked.bind="deleted" />
+                            <span class="-label-body">Deleted</span>
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col m3">
+                    <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
+                </div>
             </div>
-
-            <div class="form-group">
-                <label for="deletedCheckbox" auth-req="Moderator, Administrator">
-                    <input id="deletedCheckbox" type="checkbox" checked.bind="deleted" />
-                    <span class="-label-body">Deleted</span>
-                </label>
-            </div>
-
-            <div class="form-group">
-                <label for="unitTypeInput">Unit Types</label>
-                <unit-type-picker id="unitTypeInput"
-                                  value.two-way="types">
-                </unit-type-picker>
-            </div>
-
-            <div class="form-group">
-                <label for="unitClassInput">Unit Classes</label>
-                <unit-class-picker id="unitClassInput"
-                                   value.two-way="classes"
-                                   editable="true">
-                </unit-class-picker>
-            </div>
-
-
-            <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
-
         </fieldset>
     </form>
 </template>
