Adding tooltips for generics.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-inline.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-inline.html
@@ -1,5 +1,6 @@
 ﻿<template>
     <unit-display repeat.for="slot of slots"
-                  model.bind="slot">
+                  model.bind="slot"
+                  tooltip="false">
     </unit-display>
 </template>
