--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -7,7 +7,7 @@
                 <div class="col m12">
                     <div class="form-group">
                         <label for="termInput">Team Name</label>
-                        <input id="termInput" type="text" class="_width100" value.bind="term & debounce" focus="true" placeholder="Urouge Colo..." />
+                        <input id="termInput" type="text" class="_width100" value.bind="term & debounce" focus="true" placeholder="Coli Neko..." />
                     </div>
                 </div>
                 <div class="col m6">
