Fixing box stuff.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -27,7 +27,7 @@
                 <li class="_floatRight" if.bind="accountService.isLoggedIn">
                     <a route-href="route: boxes"
                        title.bind="boxTitle"
-                       class.bind="boxesIsActive">
+                       class.bind="boxIsActive">
                         <i class="fa fa-fw" class.bind="boxIcon"></i>
                     </a>
                 </li>
