Getting all that box toggle goodness ready.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -23,7 +23,7 @@
                             <div class="unit-collection">
                                 <unit-display repeat.for="unit of units"
                                               model.bind="unit"
-                                              click.delegate="clicked(unit)">
+                                              selected.delegate="eventClicked($event)">
                                 </unit-display>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
                     <fieldset>
                         <legend>Output</legend>
                         <div class="_alignCenter">
-                            <unit-display size="large" model.bind="genericBuilder" click.delegate="clicked(genericBuilder)">
+                            <unit-display size="large" model.bind="genericBuilder" selected.delegate="eventClicked($event)">
                             </unit-display>
                         </div>
                     </fieldset>
