Checkbox utilities and unload protection.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -23,7 +23,8 @@
                             <div class="unit-collection">
                                 <unit-display repeat.for="unit of units"
                                               model.bind="unit"
-                                              selected.delegate="eventClicked($event)">
+                                              selected.delegate="eventClicked($event)"
+                                              show-box="true">
                                 </unit-display>
                             </div>
                         </div>
