--- a/Source/TreasureGuide.Web/src/custom-elements/team-slot.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-slot.html
@@ -6,12 +6,14 @@
                           editable.bind="editable"
                           info="true"
                           allow-generics="true"
-                          selected.delegate="unitAdded($event, false)">
+                          selected.delegate="unitAdded($event, false)"
+                          show-box="true">
             </unit-display>
             <unit-display if.bind="!hasMain"
                           editable.bind="editable"
                           allow-generics="true"
-                          selected.delegate="unitAdded($event, false)">
+                          selected.delegate="unitAdded($event, false)"
+                          show-box="true">
             </unit-display>
         </div>
         <div class="team-subs">
@@ -20,14 +22,16 @@
                               editable.bind="editable"
                               info="true"
                               allow-generics="true"
-                              selected.delegate="unitAdded($event, true)">
+                              selected.delegate="unitAdded($event, true)"
+                              show-box="true">
                 </unit-display>
             </div>
             <div class="team-unit" auth-req="BetaTester" if.bind="canAddSubs">
                 <unit-display editable="true"
                               info="true"
                               allow-generics="true"
-                              selected.delegate="unitAdded($event, true, true)">
+                              selected.delegate="unitAdded($event, true, true)"
+                              show-box="true">
                 </unit-display>
             </div>
         </div>
