--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -62,6 +62,12 @@
                                     <span class="-label-body"> Global</span>
                                 </label>
                             </div>
+                            <div class="form-group">
+                                <label for="myBoxInput">
+                                    <input id="myBoxInput" type="checkbox" checked.bind="myBox" />
+                                    <span class="-label-body"> In My Box</span>
+                                </label>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
