--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -63,9 +63,12 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <label for="myBoxInput">
-                                    <input id="myBoxInput" type="checkbox" checked.bind="myBox" />
-                                    <span class="-label-body"> In My Box</span>
+                                <label for="myBoxInput" title.bind="myBoxTitle">
+                                    <input id="myBoxInput"
+                                           type="checkbox"
+                                           checked.two-way="myBox"
+                                           disabled.bind="myBoxDisabled" />
+                                    <span class="-label-body"> Box Filter</span>
                                 </label>
                             </div>
                         </div>
