Updating size of unit picker.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
@@ -23,7 +23,8 @@
                             <unit-display repeat.for="unit of units"
                                           model.bind="unit"
                                           show-box="true"
-                                          box.bind="box">
+                                          box.bind="box"
+                                          size="medium">
                             </unit-display>
                         </div>
                     </div>
