Updating box header.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
@@ -4,7 +4,7 @@
             <div class="_floatRight">
                 <a click.delegate="cancel()" class="button _flat modal-action">X</a>
             </div>
-            <h3>Select a Unit</h3>
+            <h3>Add/Remove Units</h3>
         </ux-dialog-header>
         <ux-dialog-body>
             <div class="tab" if.bind="allowGenerics">
