--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li class="_floatRight" auth-req>
-                    <a route-href="route: account; params.bind: { id: accountService.userProfile.userName }"
+                    <a route-href="route: profile; params.bind: { id: accountService.userProfile.userName }"
                        class.bind="accountIsActive">
                         ${accountService.userProfile.userName}
                     </a>
