--- a/Source/TreasureGuide.Web/src/custom-elements/displays/video-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/video-display.html
@@ -8,7 +8,7 @@
         </div>
         <div class="row">
             <small class="_floatLeft">
-                <a route-href="route: account; params.bind: { id: userName }">
+                <a route-href="route: profile; params.bind: { id: userName }">
                     <user-display name.bind="userName" unit-id.bind="userUnitId"></user-display>
                 </a>
             </small>
