--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -63,6 +63,12 @@
                                 </label>
                             </div>
                             <div class="form-group">
+                                <label for="eventShipCheckbox">
+                                    <input id="eventShipCheckbox" type="checkbox" checked.bind="eventShips" />
+                                    <span class="-label-body"> Retired Event Ships</span>
+                                </label>
+                            </div>
+                            <div class="form-group">
                                 <label for="myBoxInput" title.bind="myBoxTitle">
                                     <input id="myBoxInput"
                                            type="checkbox"
