Can now click things easier.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
@@ -24,6 +24,7 @@
                                           model.bind="unit"
                                           show-box="true"
                                           box.bind="box"
+                                          selected.delegate="toggle($event)"
                                           size="medium">
                             </unit-display>
                         </div>
