Adding unit individual flag displays.

--- a/Source/TreasureGuide.Web/src/custom-elements/unit-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-display.html
@@ -17,5 +17,6 @@
         </button>
         <a if.bind="link" class="unit-link" href.bind="link" target="_blank"></a>
         <input if.bind="showBoxInput" type="checkbox" checked.bind="hasUnit" title.bind="boxTitle" class="in-box" />
+        <ind-unit-flag-display if.bind="showBoxFlags" value.bind="unitBoxFlags"></ind-unit-flag-display>
     </div>
 </template>
