--- a/Source/TreasureGuide.Web/src/custom-elements/displays/video-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/video-display.html
@@ -9,7 +9,7 @@
         <div class="row">
             <small class="_floatLeft">
                 <a route-href="route: profile; params.bind: { id: userName }">
-                    <user-display name.bind="userName" unit-id.bind="userUnitId"></user-display>
+                    <user-display name.bind="userName" unit-id.bind="userUnitId" donor.bind="userIsDonor"></user-display>
                 </a>
             </small>
             <small class="_floatRight">
