--- a/Source/TreasureGuide.Web/src/custom-elements/team-box.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-box.html
@@ -25,7 +25,7 @@
         </div>
         <div class="row _alignRight submission">
             -
-            <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId"></user-display>
+            <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId" donor.bind="team.submittedByIsDonor"></user-display>
             ${team.editedDate | ageFormat}
         </div>
     </a>
